# soil_nutrients_gap_prediction

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/processed/: clean_train.csv
data/raw/: Sentinel2_data.csv  VariableDefinitions.csv
docs/: mkdocs.yml
docs/docs/: index.md
models/: 01_linear_model.joblib  02_random_forest.joblib  baseline_model.joblib
notebooks/: 01_eda.ipynb  02_baseline_linear.ipynb  02_random_forest.ipynb
src/: config.py  dataset.py  features.py
src/modeling/: train.py
